Prevent a fling scroll when actual scroll events were consumed.

This fixes a bug with ChromeOS touchpad scrolling where a fling scroll
is initiated even if the scroll events are consumed. Fling scroll
events are not cancellable so this results in a fling scroll happening
at the end of a consumed touchpad scroll, as demonstrated on
https://jsfiddle.net/kuqhjem4/.

Bug: 894223
Change-Id: I38f9f3ba3b6651540c26304832fc662b6d72a5c4
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1733575
Commit-Queue: Nick Burris <nburris@chromium.org>
Reviewed-by: Robert Kroeger <rjkroege@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#686427}

Former-commit-id: c996f218c7efa8124a67b30e199bfb78f010954f