content/browser/renderer_host/input/gesture_event_queue.cc
@@ -226,4 +226,11 @@ void GestureEventQueue::SendScrollEndingEventsNow() {
   }
 }
 
+void GestureEventQueue::OnWheelEventAck(
+    const MouseWheelEventWithLatencyInfo& event,
+    InputEventAckSource ack_source,
+    InputEventAckState ack_result) {
+  fling_controller_.OnWheelEventAck(event, ack_source, ack_result);
+}
+
 }  // namespace content
